colang-cli/tests/samples/features/char/good/ascii_code.co
fun main() {
  var c = '\n';
  assert(ascii_code(c) == 10);

  assert(ascii_code('a') == 97);
}
