colang-cli/tests/samples/features/char/compile_error/cyrillic_char.co
fun main() {
  var c = 'Ñ';
}
